--- a/src/app/monster/monster.component.html
+++ b/src/app/monster/monster.component.html
@@ -1,65 +1,36 @@
-<div class="panel panel-primary" *ngFor="let monster of monsters">
-    <div class="panel-heading">
-      <h3 class="panel-title">{{monster.Name}}</h3>
-    </div>
-    <div class="panel-body">
-      <div class="col-xs-10">
-        <div class="row vertical-align">
-  
-          <div class="col-xs-4">
-            <img class="imageClass" [src]="monster.ImageLink" />
-          </div>
-          <div class="col-xs-8">
-  
-            <div class="row">
-              <div class="col-xs-6">
-                Id
-              </div>
-              <div class="col-xs-6">
-                : {{monster.Id}}
-              </div>
-            </div>
-            <div class="row">
-              <div class="col-xs-6">
-                Name
-              </div>
-              <div class="col-xs-6">
-                : {{monster.Name}}
-              </div>
-            </div>
-            <div class="row">
-              <div class="col-xs-6">
-                Exp
-              </div>
-              <div class="col-xs-6">
-                : {{monster.Exp}}
-              </div>
-            </div>
-            <div class="row">
-              <div class="col-xs-6">
-                HP
-              </div>
-              <div class="col-xs-6">
-                : {{monster.HP}}
-              </div>
-            </div>
-            <div class="row">
-              <div class="col-xs-6">
-                Movement Speed
-              </div>
-              <div class="col-xs-6">
-                : {{monster.MovementSpeed}}
-              </div>
-            </div>
-            <div class="row">
-              <div class="col-xs-6">
-                Seeing Invisible
-              </div>
-              <div class="col-xs-6">
-                : {{true == monster.SeeingInvsible ? 'True' : 'False'}}
-              </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
+<div class="pt-5 pb-5">
+  <p-table [value]="monsters">
+    <ng-template pTemplate="header">
+      <tr>
+        <th>Image</th>
+        <th>Id</th>
+        <th>Name</th>
+        <th>Exp</th>
+        <th>HP</th>
+        <th>MovementSpeed</th>
+        <th>SeeingInvisible</th>
+        <th>Akcje</th>
+      </tr>
+    </ng-template>
+    <ng-template pTemplate="body" let-monster>
+      <tr>
+        <td><img [src]="monster.ImageLink" /></td>
+        <td>{{monster.Id}}</td>
+        <td>{{monster.Name}}</td>
+        <td>{{monster.Exp}}</td>
+        <td>{{monster.HP}}</td>
+        <td>{{monster.MovementSpeed}}</td>
+        <td>{{monster.SeeingInvisible}}</td>
+        <td>
+          <button (click)="deleteMonster(monster.Id)">X</button>
+          <button (click)="toggleEdition(monster)">E</button>
+        </td>
+      </tr>
+    </ng-template>
+  </p-table>
+</div>
+
+<app-edit-dialog [monster]="currentMonster"
+                 [displayModal]="editMonster"
+                 (modalClosed)="editMonster = $event">
+</app-edit-dialog>
