--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
-@font-face {
-    font-family: "Open Sans";
-    src: local("Open Sans"), url(./assets/fonts/OpenSans-SemiBold.ttf) format("truetype");
-}
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+@import '~primeicons/primeicons.css';
+@import '~primeng/resources/primeng.min.css';
+@import '~primeng/resources/themes/saga-blue/theme.css';
+
+
