--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -29,13 +29,14 @@ li a:hover {
 </style>
 </head>
 <body>
-
   <div class="container"></div>
-<ul>
-  <li><a class="active" href="/home">Home</a></li>
-  <li><a href="/start">Start</a></li>
-</ul>
-
+  <div>
+    <ul>
+      <li><a class="active" href="/home">Home</a></li>
+      <li><a href="/start">Start</a></li>
+      <li id="logo"><img src="assets/logo-ikea.jpeg"></li>
+    </ul>
+  </div>
 
 </body>
 </html>
