--- a/src/styles.css
+++ b/src/styles.css
@@ -3,4 +3,6 @@
 @import '~primeng/resources/primeng.min.css';
 @import '~primeng/resources/themes/saga-blue/theme.css';
 
-
+* {
+  font-family:'Open Sans', sans-serif;
+}
