--- a/src/app/shared/dialogs/context-dialog/remove-form/remove-form.component.html
+++ b/src/app/shared/dialogs/context-dialog/remove-form/remove-form.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="addMonsterForm" (ngSubmit)="submit()">
+<form [formGroup]="removeMonsterForm" (ngSubmit)="submit()">
   <div>
     Are you sure u want to delete monster with Id: {{ monster?.Id }}
   </div>
