--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -34,7 +34,7 @@ li a:hover {
     <ul>
       <li><a class="active" href="/home">Home</a></li>
       <li><a href="/start">Start</a></li>
-      <li id="logo"><img src="assets/logo-ikea.jpeg"></li>
+      <li id="logo"><img src="assets/tibialogo.png"></li>
     </ul>
   </div>
 
