--- a/src/scss/prime-ng/_table.scss
+++ b/src/scss/prime-ng/_table.scss
@@ -1,3 +1,10 @@
-p-table thead tr {
-  height: 5rem;
+p-table {
+  thead tr {
+    height: 5rem;
+  }
+
+  tbody tr td img {
+    max-width: 64px;
+    max-height: 64px;
+  }
 }
