--- a/src/scss/prime-ng/_table.scss
+++ b/src/scss/prime-ng/_table.scss
@@ -21,6 +21,7 @@ p-table {
 
   tbody tr {
     background: transparent !important;
+    height: 97px;
 
     td {
       border-color: #495057 !important;
