--- a/src/scss/prime-ng/_dialog.scss
+++ b/src/scss/prime-ng/_dialog.scss
@@ -17,7 +17,11 @@ p-dialog {
   width: fit-content;
 
   .p-dialog {
-    width: 20%;
+    width: 435px;
+
+    @media screen and (max-width: 869px) {
+      width: 75%;
+    }
   }
 
   .p-dialog-content {
