--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,43 +1,3 @@
-<!DOCTYPE html>
-<html>
-<head>
-<style>
-ul {
-  position: sticky;
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-  background-color: #333;
-}
-
-li {
-  float: left;
-}
-
-li a {
-  display: block;
-  color: white;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-}
-
-li a:hover {
-  background-color: rgb(138, 138, 138);
-}
-</style>
-</head>
-<body>
-  <div class="container"></div>
-  <div>
-    <ul>
-      <li><a class="active" href="/home">Home</a></li>
-      <li><a href="/start">Start</a></li>
-    </ul>
-  </div>
-
-</body>
-</html>
+<app-header></app-header>
 
 <router-outlet></router-outlet>
