--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,39 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <title></title>
-  <style>
-    body
-    {
-background-color: rgba(51, 51, 51, 0.753) ;
-    }
-    h1{
-      text-align:center;
-        font-family:'Open Sans', sans-serif;
-        color:#ffffff;
-        background-color: rgba(51, 51, 51, 0.753) ;
-        
-    }
-    
-    h5{
-      text-align:top;
-        font-family:'Open Sans', sans-serif;
-        color:#ffffff;
-        
-    }
-  </style>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-
-<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-
-</head>
-<body>
 <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-  <h1>Welcome. This is C.R.U.D application for Tibia's database</h1>
+  <h1 style="background-color: transparent">Welcome. This is C.R.U.D application for Tibia's database</h1>
     <ol class="carousel-indicators">
         <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
         <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
@@ -43,28 +9,28 @@ background-color: rgba(51, 51, 51, 0.753) ;
     <div class="carousel-inner">
         <div class="carousel-item active">
             <img class="d-block w-100" src="assets/1.jpg" alt="First slide" >"
-            <div class="carousel-caption d-none d-md-block">
+            <div class="carousel-caption d-md-block">
                 <h5>Create.R.U.D</h5>
                 <p>You can create new monster an put it into database.</p>
             </div>
         </div>
         <div class="carousel-item">
             <img class="d-block w-100" src="assets/2.jpg" alt="Second slide">
-            <div class="carousel-caption d-none d-md-block">
+            <div class="carousel-caption d-md-block">
               <h5>C.Read.U.D</h5>
               <p>You can read the list of monsters from database.</p>
           </div>
         </div>
         <div class="carousel-item">
             <img class="d-block w-100" src="assets/3.jpg" alt="Third slide">
-            <div class="carousel-caption d-none d-md-block">
+            <div class="carousel-caption d-md-block">
               <h5>C.R.Update.D</h5>
               <p>You can update already existing monsters in database.</p>
           </div>
         </div>
         <div class="carousel-item">
           <img class="d-block w-100" src="assets/4.jpg" alt="Fourth slide">
-          <div class="carousel-caption d-none d-md-block">
+          <div class="carousel-caption d-md-block">
             <h5>C.R.U.Delete</h5>
             <p>You can delete monsters from database.</p>
         </div>
@@ -79,5 +45,3 @@ background-color: rgba(51, 51, 51, 0.753) ;
         <span class="sr-only">Next</span>
     </a>
 </div>
-</body>
-</html>
