--- a/src/app/monster/monster.component.scss
+++ b/src/app/monster/monster.component.scss
@@ -39,3 +39,10 @@ td button {
     padding-right: 1rem;
   }
 }
+
+.sort-title {
+  cursor: pointer;
+  .sort-icon {
+    font-size: .75rem;
+  }
+}
